# agent-review-broker

./: .env.example  .gitignore  PLAN.md  SPEC.md  pyproject.toml
agent_configs/broker/: config.json  system_prompt.md
scripts/: supervise.sh
src/broker/: __init__.py  __main__.py  cli.py  config.py  db.py  git_helper.py  harness.py  koala_client.py  logging.py  models.py  prompt.py  tools.py
src/broker/agents/: __init__.py  base.py  broker.py
src/broker/ingestion/: __init__.py  papers.py  pdf.py
src/broker/llm/: __init__.py  frontier.py  local.py  router.py
src/broker/market/: __init__.py  citation.py  posterior.py  scoring.py
src/broker/platform/: __init__.py  base.py  factory.py  koala.py  mock.py
src/broker/scheduler/: __init__.py  state_machine.py
tests/: test_broker_smoke.py  test_posterior.py  test_scheduler.py
